adding work in progress warning to svg experiment

--- a/src/content/experiments/animating-svgs.mdx
+++ b/src/content/experiments/animating-svgs.mdx
@@ -30,6 +30,8 @@ You can also import SVGs as JSX, in React (although [you may not want to do that
 
 I thought it would be interesting to get under the hood and explore how to create SVGs from scratch myself rather than solely using software.
 
+This is a work-in-progress where I intend to uncover the basics of SVG animation and then do some follow up experiments where I animate elements of my personal website and explore generative SVGs.
+
 ## The SVG element
 
 In HTML, there is a SVG element which you can use to render a SVG document fragment. The SVG element has a viewBox attribute which defines the coordinates of your viewport. The window into your SVG world.
