--- a/src/content/thoughts/build-the-right-thing-before-you-build-the-thing-right.mdx
+++ b/src/content/thoughts/build-the-right-thing-before-you-build-the-thing-right.mdx
@@ -36,7 +36,7 @@ Once you understand your users' needs, you can come up with novel ways to serve 
 
 ## How do you know if your ideas will work?
 
-Unfortunately, us human beings have an innate tendency to over value our own ideas.
+Unfortunately, us human beings have an innate tendency to overvalue our own ideas.
 
 Studies show that people err systematically when forecasting the value of their own innovation. Once we come up with an idea, we tend to then seek corroboration and proof that our idea is a good one.
 
@@ -84,9 +84,9 @@ A prototype can inspire, excite, and win hearts and minds.
 
 Prototypes are useful because, rather than using the limitations of one's working memory and imagination, you can start playing with the possible.
 
-In similar way that journalling can help unblock your thinking, building in order to think means that you make your ideas tangible quickly. This helps fuel early ideation and pushes your thinking further.
+Like journalling can free your mind, prototying can help unblock you. Building to think means that you make your ideas tangible, quickly. This helps fuel early ideation and pushes your thinking further.
 
-Like a time machine that lets you fast forward and realise something you need to understand that doesn’t exist today, prototyping can help you unlock new ideas that you wouldn’t necessarily just “think of”.
+Prototyping can help you unlock new ideas that you wouldn’t just “think of”. A time machine that lets you glimpse the possible and understand what doesn't exist today.
 
 ## How to prototype
 
@@ -114,7 +114,7 @@ Make sure you:
 - gather early feedback from your team, stakeholders and end-users,
 - be cognisant of confirmation bias and sunken cost fallacy (the feeling because you've invested so much in an idea, you shouldn't give up on it when even when it's proven fallible).
 
-Typically, a prototype, by design, is disposable but through rapid-prototyping you can iterate and refine as you go — if you reuse parts, just be careful that "throw-away" code doesn't end up being used in production.
+Typically, a prototype, by design, is disposable but through rapid-prototyping you can iterate and refine as you go — but if you do re-use parts, just be careful that "throw-away" code doesn't end up being used in production.
 
 When you have gained confidence in your idea, build the smallest thing possible that will deliver the value your users are looking for, and then iterate on that based continual feedback.
 
