adding notes on self-management

--- a/src/content/thoughts/making-your-mind-up.mdx
+++ b/src/content/thoughts/making-your-mind-up.mdx
@@ -2,13 +2,15 @@
 title: Making your mind up
 description: Making sound decisions using mental models
 stage: note
-lastEdited: 08.08.2023
+lastEdited: 22.02.2024
 tag: self-management
 ---
 
 import ReadMore from "@components/ReadMore.astro";
 
-To help me think things through, I write. By slowing down, putting pencil to paper and crafting sentences, I move past my intial thoughts, reflect on what else I know and imagine new possibilties.
+To help me think things through, I write.
+
+By slowing down, putting pencil to paper and crafting sentences, I move past my intial thoughts, reflect on what else I know and imagine new possibilties.
 
 But when you make decisions, are you just acting on instinct, or do you have a method?
 
@@ -33,10 +35,12 @@ But don't stop here, think "And then what?".
 
 This is called Second-order thinking. Contemplating further along the cause and effect chain, can identify unintentional consequences.
 
-Time-travel your mind – flash forward 10 minutes, then zoom to 10 months, and 10 years! What rollercoaster of ramifications are you setting into motion?
+Time-travel your mind – flash forward 10 minutes, then zoom to 10 months, and 10 years! What could be the rollercoaster of ramifications are you setting into motion?
 
 Second order thinking is a mental model we can apply to decision making.
 
 Mental models are patterns your brain uses to figure stuff out — frameworks that help you look at problems through different lenses.
 
-There are too many mental models to list!
+Mental models, can help make sense of the world.
+
+Reflecting on your experience understanding the facts leading up to the decision, how you applied the mental model, and the consequences of your actions help you become a little wiser.
