adding another essay and fixing links

--- a/src/content/thoughts/goal-setting-and-getting.mdx
+++ b/src/content/thoughts/goal-setting-and-getting.mdx
@@ -25,7 +25,7 @@ Defining goals in terms of an approach basis can be more motivating than goals d
 
 Think about where you are now compared to where you want to be. Contrasting these two states can be a powerful motivator.
 
-Imagine the obstacles in the way of your desired future state, use [Implementation Intentions](./thoughts/implementation-intentions) to overcome them.
+Imagine the obstacles in the way of your desired future state, use [Implementation Intentions](/thoughts/implementation-intentions) to overcome them.
 
 Think about the habits you need to maintain, set up systems and the conditions for success.
 
