--- a/src/content/thoughts/making-the-most-of-observations.mdx
+++ b/src/content/thoughts/making-the-most-of-observations.mdx
@@ -13,5 +13,4 @@ import ReadMore from "@components/ReadMore.astro";
 - What does that mean?
 - What observations can you make notes on?
 - What insight can you find in that observation?
-- <a href="./how-to-create-the-perfect-post">Turn insights into posts</a>
-
+- [Turn insights into posts](/thoughts/how-to-create-the-perfect-post)
