--- a/src/content/thoughts/metacognition.mdx
+++ b/src/content/thoughts/metacognition.mdx
@@ -8,7 +8,7 @@ tag: self-management
 
 import ReadMore from "@components/ReadMore.astro";
 
-After writing about using the act of writing and rewriting using spaced repetition to [take my notes to the next level](./taking-notes-to-the-next-level), I became interested in how we learn, think and problem solve.
+After writing about using the act of writing and rewriting using spaced repetition to [take my notes to the next level](/thoughts/taking-notes-to-the-next-level), I became interested in how we learn, think and problem solve.
 
 We call thinking about thinking “metacognition” and it can be broken down into:
 
@@ -16,7 +16,7 @@ We call thinking about thinking “metacognition” and it can be broken down in
 - Metacognitive regulation. The activities and strategies that you use to control your thinking.
 - Metacognitive experiences. The thoughts and feelings that you have when you are learning something new or trying to solve a problem.
 
-Metacognition is really the act of observing and reflecting on thoughts. It's tied closely with mental health and [procrastination](./procrastination).
+Metacognition is really the act of observing and reflecting on thoughts. It's tied closely with mental health and [procrastination](/thoughts/procrastination).
 
 ## Learning strategies
 
