--- a/src/content/thoughts/opportunity.mdx
+++ b/src/content/thoughts/opportunity.mdx
@@ -10,7 +10,7 @@ import ReadMore from "@components/ReadMore.astro";
 
 Make your own luck.
 
-Become the best at what you do — see [Authenticity](./thoughts/authenticity). Refine what you do until you are the best.
+Become the best at what you do — see [Authenticity](/thoughts/authenticity). Refine what you do until you are the best.
 
 Be a maker who makes something interesting people want.
 
