--- a/src/content/thoughts/procrastination.mdx
+++ b/src/content/thoughts/procrastination.mdx
@@ -26,7 +26,7 @@ By changing your reaction to the cues that trigger your habit of procrastination
 - Develop new responses to those cues, change your environment, eliminate those distractions.
 - Reward the new behaviour — be consistent.
 
-You can try <a href="./interstitial-journalling">interstitial journalling</a> to help track when you procrastinate.
+You can try [interstitial journalling](/thoughts/interstitial-journalling) to help track when you procrastinate.
 
 Write out your strategy as an Implementation Intention:
 
