--- a/src/content/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/content/thoughts/taking-notes-to-the-next-level.mdx
@@ -50,7 +50,7 @@ Each time I find something interesting on the internet, I will plant my notes as
 
 Now, this can be a one-off action. After all, not all seeds germinate and lie dormant. But I can return to my garden to cultivate, tend to and iterate on the ideas. Notes can be nutured into more rounded reflective essays over time.
 
-Revisiting the material in this way, <a href="./metacognition">using spaced repetition</a>, helps us to retain and recall the information.
+Revisiting the material in this way, [using spaced repetition](/thoughts/metacognition), helps us to retain and recall the information.
 
 ## Returning to tend to the garden
 
@@ -58,7 +58,7 @@ Explaining core ideas and how they relate to each other in plain language so tha
 
 <Sapling />
 
-By regularly returning to edit and iterate notes into <a href="./how-to-create-the-perfect-post">useful documents for others</a>, ideas can be strengthened and knowledge re-enforced.
+By regularly returning to edit and iterate notes into [useful documents for others](/thoughts/how-to-create-the-perfect-post), ideas can be strengthened and knowledge re-enforced.
 
 Publishing essays and asking for feedback cross-pollinates ideas. Articles can be revised and refined further overtime. Content becomes evergreen and matures into well-structured thoughts and prose.
 
