--- a/src/content/thoughts/why-i-dont-hate-typescript.mdx
+++ b/src/content/thoughts/why-i-dont-hate-typescript.mdx
@@ -10,9 +10,9 @@ import { Prism } from "@astrojs/prism";
 
 When I first started learning TypeScript, my immediate reaction was “this is going to slow me down”. Declaring types everywhere seemed like a recipe for verbose, convoluted and hard to read code.
 
-Until I started working in engineering teams, my speciality was creating prototypes for usability testing. The emphasis with rapid-prototyping is on the rapid, it's a quick way to test your working assumptions. I had no time for type checking (or unit tests for that matter). I had to make sure that we build the right thing, before we build the thing right.
+Until I started working in engineering teams, my speciality was creating prototypes for usability testing. The emphasis with rapid-prototyping is on the rapid, it's a quick way to test your working assumptions. I had no time for type checking (or unit tests for that matter). I had to make sure that we [build the right thing, before we build the thing right](/thoughts/build-the-right-thing-before-you-build-the-thing-right).
 
-Well, now I think I'm coming round to not hating TypeScript for two reasons. Namely, Type Inference and Autocomplete
+Well, now I think I'm coming round to not hating TypeScript for two reasons. Namely, **Type Inference** and **Autocomplete**.
 
 ## Type Inference
 
