update blog post to essay

--- a/src/content/thoughts/pure-clean-and-simple.mdx
+++ b/src/content/thoughts/pure-clean-and-simple.mdx
@@ -1,8 +1,8 @@
 ---
 title: Clean, pure and simple
 description: Functional react with hooks
-stage: note
-lastEdited: 05.03.2024
+stage: essay
+lastEdited: 03.04.2024
 tag: code
 ---
 
